# github-upload

./: ngankitrading-0.0.1.ebuild  setup.cfg
ebuilds/: ngankitrading-0.0.1.ebuild
ngankitrading/: controlmodule.py  dataimport.py  emailmodule.py  portfolioanalysis.py  webcrawling.py
src/ngankitrading/: controlmodule.py  emailmodule.py  tradingmodule.py
src/ngankitrading/outputs/: portfolio.csv
tests/fixtures/: test_betas.csv  test_days_dict.csv  test_resids.csv  test_resids_var.csv  test_rets.csv  test_six_eq.csv  test_varcov.csv  test_yields_df.csv
tests/unit/: test_portfolioanalysis.py
