[metadata]

name = ngankitrading
version = 0.0.1
author = Alvaro Neto
author_email = alvaro.jneto@gmail.com
description = Nganki Project's trading programme
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kiluanji/ngankitrading
project_urls =
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
